# evmlr-shuffle

./: .gitignore  CMakeLists.txt  Makefile  README.md  bench.c  bench.h  cpucycles.c  evmlr_bin_proof.c  evmlr_bin_proof.h  evmlr_challenge.c  evmlr_challenge.h  evmlr_commit.c  evmlr_commit.h  evmlr_crt.c  evmlr_crt.h  evmlr_enc.c  evmlr_enc.h  evmlr_extra.c  evmlr_hpke.c  evmlr_hpke.h  evmlr_lin_comp.c  evmlr_lin_proof.c  evmlr_lin_proof.h  evmlr_mlpke.c  evmlr_mlpke.h  evmlr_otse.c  evmlr_otse.h  evmlr_params.h  evmlr_shuffle.c  evmlr_shuffle.h  evmlr_utils.c  evmlr_utils.h  sha.h  sha224-256.c  test.h  test_crt.c  test_mul.c
